# social-content-creator

social-content-creator/: .gitignore  DOCUMENTACAO.md  README.md  render.yaml  start-backend.bat  start-frontend.bat
social-content-creator/backend/: .env.example  .gitignore  main.py  pyproject.toml  railway.json  requirements.txt
social-content-creator/backend/app/: config.py
social-content-creator/backend/app/agents/: __init__.py  audio_creator.py  copywriter.py  hashtag_expert.py  image_creator.py  post_builder.py  profile_analyzer.py  script_writer.py  transcriber.py  video_creator.py
social-content-creator/backend/app/api/: __init__.py  content.py
social-content-creator/backend/app/schemas/: __init__.py  content.py
social-content-creator/backend/app/teams/: __init__.py  content_generator.py  content_master.py  learn_engine.py  media_creator.py
social-content-creator/backend/app/tools/: __init__.py  openai_tts.py
social-content-creator/frontend/: index.html  package.json  vercel.json
social-content-creator/frontend/src/: App.tsx  index.css
social-content-creator/frontend/src/components/: ChatInterface.tsx  ContentCreator.tsx  ProfileAnalyzer.tsx
social-content-creator/frontend/src/lib/: api.ts  types.ts
