[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "social-content-creator"
version = "1.0.0"
description = "Social Content Creator with Agno AI Agents"
requires-python = ">=3.10"
dependencies = [
    "agno>=1.0.0",
    "openai>=1.40.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-dotenv>=1.0.1",
]
